# BigBoilerPlate

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/: BigBoilerPlate.h
src/: BigBoilerPlate.cpp  CMakeLists.txt
